src/parser/generated/MiniCalcLangParser.py
# Generated from MiniCalcLang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MiniCalcLangParser ( Parser ):

    grammarFileName = "MiniCalcLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'def'", "'('", "','", "')'", 
                     "'='", "'print'", "'if'", "'else'", "'while'", "'for'", 
                     "'to'", "'step'", "'return'", "'break'", "'continue'", 
                     "'''", "'+'", "'-'", "'not'", "'^'", "'*'", "'/'", 
                     "'%'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
                     "'and'", "'or'", "'['", "']'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TRUE", "FALSE", "ID", "NUMBER", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_def_stmt = 3
    RULE_assignment = 4
    RULE_print_stmt = 5
    RULE_if_stmt = 6
    RULE_while_stmt = 7
    RULE_for_stmt = 8
    RULE_return_stmt = 9
    RULE_break_stmt = 10
    RULE_continue_stmt = 11
    RULE_expr_stmt = 12
    RULE_expr = 13
    RULE_matrix_expr = 14
    RULE_matrix_row = 15

    ruleNames =  [ "program", "statement", "block", "def_stmt", "assignment", 
                   "print_stmt", "if_stmt", "while_stmt", "for_stmt", "return_stmt", 
                   "break_stmt", "continue_stmt", "expr_stmt", "expr", "matrix_expr", 
                   "matrix_row" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    TRUE=36
    FALSE=37
    ID=38
    NUMBER=39
    STRING=40
    WS=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniCalcLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniCalcLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniCalcLangParser.T__2) | (1 << MiniCalcLangParser.T__3) | (1 << MiniCalcLangParser.T__7) | (1 << MiniCalcLangParser.T__8) | (1 << MiniCalcLangParser.T__10) | (1 << MiniCalcLangParser.T__11) | (1 << MiniCalcLangParser.T__14) | (1 << MiniCalcLangParser.T__15) | (1 << MiniCalcLangParser.T__16) | (1 << MiniCalcLangParser.T__18) | (1 << MiniCalcLangParser.T__19) | (1 << MiniCalcLangParser.T__20) | (1 << MiniCalcLangParser.T__33) | (1 << MiniCalcLangParser.TRUE) | (1 << MiniCalcLangParser.FALSE) | (1 << MiniCalcLangParser.ID) | (1 << MiniCalcLangParser.NUMBER) | (1 << MiniCalcLangParser.STRING))) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(MiniCalcLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def def_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Def_stmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniCalcLangParser.AssignmentContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Print_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.For_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Continue_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Expr_stmtContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniCalcLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.def_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.print_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.if_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.for_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 46
                self.return_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 47
                self.break_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 48
                self.continue_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 49
                self.expr_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniCalcLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(MiniCalcLangParser.T__0)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniCalcLangParser.T__2) | (1 << MiniCalcLangParser.T__3) | (1 << MiniCalcLangParser.T__7) | (1 << MiniCalcLangParser.T__8) | (1 << MiniCalcLangParser.T__10) | (1 << MiniCalcLangParser.T__11) | (1 << MiniCalcLangParser.T__14) | (1 << MiniCalcLangParser.T__15) | (1 << MiniCalcLangParser.T__16) | (1 << MiniCalcLangParser.T__18) | (1 << MiniCalcLangParser.T__19) | (1 << MiniCalcLangParser.T__20) | (1 << MiniCalcLangParser.T__33) | (1 << MiniCalcLangParser.TRUE) | (1 << MiniCalcLangParser.FALSE) | (1 << MiniCalcLangParser.ID) | (1 << MiniCalcLangParser.NUMBER) | (1 << MiniCalcLangParser.STRING))) != 0):
                self.state = 53
                self.statement()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(MiniCalcLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Def_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCalcLangParser.ID)
            else:
                return self.getToken(MiniCalcLangParser.ID, i)

        def block(self):
            return self.getTypedRuleContext(MiniCalcLangParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_def_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef_stmt" ):
                return visitor.visitDef_stmt(self)
            else:
                return visitor.visitChildren(self)




    def def_stmt(self):

        localctx = MiniCalcLangParser.Def_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_def_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(MiniCalcLangParser.T__2)
            self.state = 62
            self.match(MiniCalcLangParser.ID)
            self.state = 63
            self.match(MiniCalcLangParser.T__3)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniCalcLangParser.ID:
                self.state = 64
                self.match(MiniCalcLangParser.ID)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniCalcLangParser.T__4:
                    self.state = 65
                    self.match(MiniCalcLangParser.T__4)
                    self.state = 66
                    self.match(MiniCalcLangParser.ID)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 74
            self.match(MiniCalcLangParser.T__5)
            self.state = 75
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCalcLangParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MiniCalcLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MiniCalcLangParser.ID)
            self.state = 78
            self.match(MiniCalcLangParser.T__6)
            self.state = 79
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_print_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = MiniCalcLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MiniCalcLangParser.T__7)
            self.state = 82
            self.match(MiniCalcLangParser.T__3)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(MiniCalcLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.BlockContext,i)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = MiniCalcLangParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MiniCalcLangParser.T__8)
            self.state = 87
            self.expr(0)
            self.state = 88
            self.block()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniCalcLangParser.T__9:
                self.state = 89
                self.match(MiniCalcLangParser.T__9)
                self.state = 90
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniCalcLangParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_while_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = MiniCalcLangParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MiniCalcLangParser.T__10)
            self.state = 94
            self.expr(0)
            self.state = 95
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCalcLangParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def block(self):
            return self.getTypedRuleContext(MiniCalcLangParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_for_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stmt" ):
                return visitor.visitFor_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_stmt(self):

        localctx = MiniCalcLangParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MiniCalcLangParser.T__11)
            self.state = 98
            self.match(MiniCalcLangParser.ID)
            self.state = 99
            self.match(MiniCalcLangParser.T__6)
            self.state = 100
            self.expr(0)
            self.state = 101
            self.match(MiniCalcLangParser.T__12)
            self.state = 102
            self.expr(0)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniCalcLangParser.T__13:
                self.state = 103
                self.match(MiniCalcLangParser.T__13)
                self.state = 104
                self.expr(0)


            self.state = 107
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = MiniCalcLangParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MiniCalcLangParser.T__14)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 110
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Break_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_break_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = MiniCalcLangParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MiniCalcLangParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Continue_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_continue_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):

        localctx = MiniCalcLangParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MiniCalcLangParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_expr_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = MiniCalcLangParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCalcLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(MiniCalcLangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class BoolExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(MiniCalcLangParser.TRUE, 0)
        def FALSE(self):
            return self.getToken(MiniCalcLangParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)


    class MatrixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def matrix_expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.Matrix_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixExpr" ):
                return visitor.visitMatrixExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowerExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerExpr" ):
                return visitor.visitPowerExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(MiniCalcLangParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParensExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParensExpr" ):
                return visitor.visitParensExpr(self)
            else:
                return visitor.visitChildren(self)


    class VarExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniCalcLangParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarExpr" ):
                return visitor.visitVarExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCalcLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniCalcLangParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class TransposeExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniCalcLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
